# NewsBot

./: .env.example  .gitignore  ai_processor.py  config.py  main.py  notifier.py  pyproject.toml  reddit_scraper.py  專案架構書.md  開發規格書.md
.github/workflows/: schedule.yml
data/: sent_posts.json
tests/: test_config.py  test_integration.py  test_notifier.py  test_processor.py  test_scraper.py
